# django-starter-kit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
accounts/: models.py  serializers.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py
core/: settings.py  urls.py
utils/: logger.py  pagination.py  response.py
